fix code style